--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "nextjs",
-  "version": "1.0.0",
+  "name": "next.js",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "11.1.2",
+    "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
   }
 }
